# pg_advisor

./: .gitignore  README.md  cli.py  pyproject.toml
analyzers/: index_rules.py  query_rules.py
collectors/: db_schema.py
connecter/: postgres.py
pg_advisor/: cli.py
pg_advisor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pg_advisor/analyzers/: activity_rules.py  hypopg_rules.py  index_rules.py  query_rules.py  schema_rules.py
pg_advisor/collectors/: db_schema.py  model_scanner.py
pg_advisor/reporters/: cli_reporter.py  md_reporter.py
pgadvisor_report/: pg_advisor_report_20260408_133538.md  pg_advisor_report_20260408_135712.md  pg_advisor_report_20260416_213634.md
reporters/: cli_reporter.py
